--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ pyarrow = "^12.0.0"
 streamlit = "^1.23.1"
 streamlit-extras = "^0.2.7"
 pyspark = "^3.4.0"
+scikit-learn = "^1.2.2"
 
 
 [build-system]
