--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ htbuilder==0.6.1 ; python_version >= "3.10" and python_version < "3.11"
 idna==3.4 ; python_version >= "3.10" and python_version < "3.11"
 importlib-metadata==6.6.0 ; python_version >= "3.10" and python_version < "3.11"
 jinja2==3.1.2 ; python_version >= "3.10" and python_version < "3.11"
+joblib==1.2.0 ; python_version >= "3.10" and python_version < "3.11"
 jsonschema==4.17.3 ; python_version >= "3.10" and python_version < "3.11"
 kiwisolver==1.4.4 ; python_version >= "3.10" and python_version < "3.11"
 lxml==4.9.2 ; python_version >= "3.10" and python_version < "3.11"
@@ -52,6 +53,7 @@ pytz==2023.3 ; python_version >= "3.10" and python_version < "3.11"
 pyyaml==6.0 ; python_version >= "3.10" and python_version < "3.11"
 requests==2.31.0 ; python_version >= "3.10" and python_version < "3.11"
 rich==13.4.1 ; python_version >= "3.10" and python_version < "3.11"
+scikit-learn==1.2.2 ; python_version >= "3.10" and python_version < "3.11"
 scipy==1.10.1 ; python_version >= "3.10" and python_version < "3.11"
 six==1.16.0 ; python_version >= "3.10" and python_version < "3.11"
 smart-open==6.3.0 ; python_version >= "3.10" and python_version < "3.11"
@@ -69,6 +71,7 @@ streamlit-toggle-switch==1.0.2 ; python_version >= "3.10" and python_version < "
 streamlit-vertical-slider==1.0.2 ; python_version >= "3.10" and python_version < "3.11"
 streamlit==1.23.1 ; python_version >= "3.10" and python_version < "3.11"
 tenacity==8.2.2 ; python_version >= "3.10" and python_version < "3.11"
+threadpoolctl==3.1.0 ; python_version >= "3.10" and python_version < "3.11"
 toml==0.10.2 ; python_version >= "3.10" and python_version < "3.11"
 toolz==0.12.0 ; python_version >= "3.10" and python_version < "3.11"
 tornado==6.3.2 ; python_version >= "3.10" and python_version < "3.11"
